# pfld_ncnn

./: CMakeLists.txt  README.md
include/: gpu_support.h
src/: detect.cpp
